<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_grid"
            android:title="@string/declension_quiz_1" />
        <item
            android:id="@+id/nav_handbook"
            android:icon="@drawable/ic_import_contacts"
            android:title="@string/handbook" />
        <item
            android:id="@+id/nav_words_with_errors"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/words_with_errors" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_star"
            android:title="@string/about" />
    </group>
</menu>