<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.usharik.app.fragment.SettingsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/colorSurface">
        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/radioGroupHeader"
                android:text="@string/word_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_sm"/>

        <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupHeader"
                android:layout_marginStart="@dimen/spacing_md"
                android:checkedButton="@={viewModel.genderFilterId}">

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioAllWords"
                    android:text="@string/all_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:useMaterialThemeColors="true"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioAnimateMasculine"
                    android:text="@string/animate_masculine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:useMaterialThemeColors="true"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioInanimateMasculine"
                    android:text="@string/inanimate_masculine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:useMaterialThemeColors="true"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioFeminine"
                    android:text="@string/feminine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:useMaterialThemeColors="true"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioNeuter"
                    android:text="@string/neuter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:useMaterialThemeColors="true"/>
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/uiLanguageHeader"
                android:text="@string/ui_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/colorOnSurface"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/spacing_sm"
                android:layout_marginTop="@dimen/spacing_sm"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUiLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:layout_marginEnd="@dimen/spacing_md"
                android:minHeight="48dp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/uiLanguageHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/checkBoxHeader"
                android:text="@string/additional_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/colorOnSurface"
                app:layout_constraintTop_toBottomOf="@+id/btnUiLanguage"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/spacing_sm"
                android:layout_marginTop="@dimen/spacing_sm"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBox"
                android:text="@string/turn_off_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:checked="@={viewModel.switchOffAnimation}"
                app:useMaterialThemeColors="true"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxHeader"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>